<resources>
    <string name="app_name">My Library</string>
    <string name="my_library">My Library</string>
    <string name="see_all_books">See All Books</string>
    <string name="currently_reading_books">Books Currently Reading</string>
    <string name="your_wish_list">Wish List</string>
    <string name="see_your_favorites">See Your Favorites</string>
    <string name="about">About</string>
    <string name="already_read_books">Books Already Read</string>
    <string name="develop_by">Develop by Mario at mepvDev</string>
    <string name="logo">Logo</string>
    <string name="book_name">Book Name</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="want_to_read">Want To Read</string>
    <string name="already_read">Already Read</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="long_description_in_here">Long Description in Here</string>
    <string name="i_book_name">Book Name:</string>
    <string name="dog_purpose">A Dog\'s Purpose</string>
    <string name="author">Author:</string>
    <string name="bruce_cameron">W. Bruce Cameron</string>
    <string name="pages">Pages:</string>
    <string name="number_pages">336</string>
    <string name="description">Description</string>
    <string name="view_card_author">Author</string>
    <string name="view_card_author_a">Mario</string>
    <string name="short_description">Short Description</string>
    <string name="delete">Delete</string>
    <string name="activity_all_books">All Books</string>
    <string name="activity_book">Book Details</string>
    <string name="activity_already_read">Books Already Read</string>
    <string name="activity_favorite_books">Favorites Books</string>
    <string name="activity_want_to_read">Wish List</string>
    <string name="activity_currently_reading">Books Currently Reading</string>
</resources>