<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/collapsedRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBook"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageBook"
                android:layout_marginTop="8dp"
                android:text="@string/book_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/buttonDownArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageBook"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_down_arrow" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expandedRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/collapsedRelativeLayout"
            android:visibility="gone">

            <TextView
                android:id="@+id/authorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_card_author" />

            <TextView
                android:id="@+id/textAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/authorText"
                android:text="@string/view_card_author_a" />

            <TextView
                android:id="@+id/textShortDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAuthor"
                android:layout_marginTop="8dp"
                android:text="@string/short_description" />

            <ImageView
                android:id="@+id/buttonUpArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textShortDescription"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_up_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_below="@id/textShortDescription"
                android:layout_toStartOf="@id/buttonUpArrow"
                android:layout_marginEnd="8dp"
                android:textColor="@color/red"
                android:id="@+id/textButtonDelete"
                android:visibility="gone"/>



        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>